--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter  
-  flutter_map: ^3.1.0
-  latlong2: ^0.8.1
-  http: ^0.13.5
+  flutter_map: ^5.0.0
+  latlong2:
+  http: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  geolocator: ^10.0.1
+  geocoding: ^2.1.0
+  csv: ^5.0.2
+  flutter_map_marker_popup: ^5.2.0
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +67,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    # - images/a_dot_burr.jpeg
+    # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
