--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geocoding: ^2.1.0
   csv: ^5.0.2
   flutter_map_marker_popup: ^5.2.0
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
