--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   csv: ^5.0.2
   flutter_map_marker_popup: ^5.2.0
   multi_select_flutter: ^4.1.3
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
